--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-NEXT_PUBLIC_FACEBOOK_CLIENT_ID=5364786566876029
-NEXT_PUBLIC_FACEBOOK_CLIENT_SECRET=c074451dd92ab7873c4c942ad5cec64e
-NEXT_PUBLIC_NEXTAUTH_URL=http://localhost:3000
+FACEBOOK_CLIENT_ID=5364786566876029
+FACEBOOK_CLIENT_SECRET=c074451dd92ab7873c4c942ad5cec64e
+NEXTAUTH_URL=http://localhost:3000
