--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 FACEBOOK_CLIENT_ID=5364786566876029
 FACEBOOK_CLIENT_SECRET=c074451dd92ab7873c4c942ad5cec64e
-NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_URL=https://next-js-student.vercel.app
 NEXTAUTH_SECRET="JOE"
