--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "firebase": "^9.8.2",
     "firebase-admin": "^11.0.1",
     "next": "12.1.6",
-    "next-auth": "^4.3.4",
     "next-firebase-auth": "^1.0.0-canary.14",
     "nookies": "^2.5.2",
-    "pdf-image": "^2.0.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-loader-spinner": "^5.1.7-beta.1",
