--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
         "**/.DS_Store": true,
         "**/Thumbs.db": true,
         "**\\node_modules": true,
-        "node_modules": false
+        "node_modules": true
     },
     "explorerExclude.backup": {}
 }
