--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nookies": "^2.5.2",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.1.7-beta.1",
     "typescript": "^4.7.3"
   },
