--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "chart.js": "^4.3.3",
     "firebase": "^9.8.2",
     "firebase-admin": "^11.0.1",
+    "lottie-react": "^2.4.0",
     "next": "12.1.6",
     "next-firebase-auth": "^1.0.0-canary.14",
     "nookies": "^2.5.2",
     "react": "18.1.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.1.0",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.1.7-beta.1",
